<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".dictionary.DictionaryActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/queryEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_search_term" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/queryEditText"
            android:layout_toRightOf="@+id/queryEditText"
            android:text="@string/search" />

        <ListView
            android:id="@+id/listViewArticles"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_below="@+id/queryEditText" />

        <TextView
            android:id="@+id/offlineLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listViewArticles"
            android:text="@string/saved_definitions"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <fragment
            android:id="@+id/offlineDefinitions"
            android:name="com.project.dictionary.SavedDefinitionsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/offlineLabel" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>